modules/cli/src/test/resources/good/efsm/gcontinue/choiceunguarded/Test04.scr
module good.efsm.gcontinue.choiceunguarded.Test04;


global protocol Proto1(role A, role B)
{
	rec X
	{
		0() from A to B;
		choice at A
		{
			//1() from A to B;
			continue X;
		}
		or
		{
			2() from A to B;
			//continue X;
		}
	}
	3() from A to B;
}


