modules/cli/src/test/resources/bad/wfchoice/enabling/threeparty/Test03a.scr
module bad.wfchoice.enabling.threeparty.Test03a;


global protocol Proto1(role A, role B, role C)
{
	rec X
	{
		choice at A
		{
			1() from A to B;
			choice at B
			{
				1() from B to C;
				continue X;  // choice at A, but A not enabled
			}
			or
			{
				3() from B to C;
			}
		}
		or
		{
			2() from A to B;
			2() from B to C;
		}
	}
}

